--- a/03-Convolutional-Neural-Networks/01-MNIST-with-CNN.ipynb
+++ b/03-Convolutional-Neural-Networks/01-MNIST-with-CNN.ipynb
@@ -123,6 +123,7 @@
    "outputs": [],
    "source": [
     "def conv2d(x, W):\n",
+    "    # x --> [batch, H,W,Channels]\n",
     "    return tf.nn.conv2d(x, W, strides=[1, 1, 1, 1], padding='SAME')"
    ]
   },
@@ -182,7 +183,7 @@
     "    input_size = int(input_layer.get_shape()[1])\n",
     "    W = init_weights([input_size, size])\n",
     "    b = init_bias([size])\n",
-    "    return tf.matmul(input_layer, W) +b"
+    "    return tf.matmul(input_layer, W) + b"
    ]
   },
   {
